# AAmatcher

./: .gitignore  LICENSE  README.md  pyproject.toml
AAmatcher/: PDBMolecule.py  __init__.py  matching.py  representation.py  utils.py
AAmatcher/xyz2res/: constants.py  deploy.py  draw_mol.py  get_residues.py  hashed_residues.json  model_.py
AAmatcher/xyz2res/scripts/: make_train_dataset.py  residue_hash.py  test.py  train.py
example/: from_logfile.py  from_xyz.py  more_xyz.py  process_g09.py  test_AAmatcher.py  test_g09topdb.py  testing.py
g09topdb/: g09topdb.py
mains/: from_logfile.py  from_xyz.py
mains/examples/: from_logfile.py
mains/scripts/: amber99sbildn_spice.py  charges.py  erics_data.py  make_graphs.py  make_spice.py  preprocess_spice.py  spice.py
mains/tests/: new_test.py  testing.py
mains/tests/charges/: test.py
mains/tests/collagen_ff/: generated.xml  ref.xml  test.py
mains/tests/erics_dataset/: erics_data.py  opt_data.py  rad.py
mains/tests/newfeat/: test.py
mains/tests/openff/: test.py
mains/tests/pdbdataset/: test.py
mains/tests/pdbmol/: test.py  test_dop.py
mains/tests/radicals/: parametrizing.py  test.py  test_openffmol.py  test_parametrize.py
src/: AAmatcher.py  PDBMolecule.py  g09topdb.py
src/PDBData/: PDBDataset.py  PDBMolecule.py  __init__.py  matching.py  offmol_indices.py  parametrize.py  read_heterogeneous_graph.py  read_homogeneous_graph.py  units.py
src/PDBData/charge_models/: charge_models.py  esp_charge.py  find_radical.py  inspect_data.py  to_json.py
src/PDBData/classical_ff/: collagen_ff.xml  (+2 more)
(+27 files in other folders)
