[build-system]
requires = ["setuptools"
]
build-backend = "setuptools.build_meta"

[project]
name = "g09-to-pdb"
version = "1.0.0"
dependencies = [
    "numpy",
    "ase",
]

[tool.setuptools]
include-package-data = true
# This is already the default behaviour if your are using
# pyproject.toml to configure your build.
# You can deactivate that with `include-package-data = false`

[tool.setuptools.packages.find]
where = ["g09topdb"]
